--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,8 @@ services:
   app:
     container_name: 'app'
     restart: always
-    build: ./
+    image: 155706891817.dkr.ecr.ap-northeast-2.amazonaws.com/flask-ecr-ecs-demo
+    build: app
     ports:
       - "8000:8000"
     command: pipenv run gunicorn -w 1 -b 0.0.0.0:8000 wsgi:app
@@ -12,7 +13,8 @@ services:
   nginx:
     container_name: nginx
     restart: always
-    build: ./nginx
+    image: flask-ecr-ecs-demo/nginx
+    build: nginx
     ports:
     - "80:80"
     depends_on:
