--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,18 +64,35 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-northeast-2
+
       - name: Fill in the new image ID in the Amazon ECS task definition
         id: task-def
         uses: aws-actions/amazon-ecs-render-task-definition@v1
         with:
           task-definition: app-task-definition.json
           container-name: app
-          image: ${{ steps.build-image.outputs.image }}
+          image: ${{ steps.app_build-image.outputs.image }}
 
       - name: Deploy Amazon ECS task definition
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
         with:
           task-definition: ${{ steps.task-def.outputs.task-definition }}
           service: flaskapp-AppService-MAZH9lAc6Ong
-          cluster: flaskappUpdate
+          cluster: flaskapp
+          wait-for-service-stability: true
+
+      - name: Fill in the new image ID in the Amazon ECS task definition
+        id: task-def-nginx
+        uses: aws-actions/amazon-ecs-render-task-definition@v1
+        with:
+          task-definition: nginx-task-definition.json
+          container-name: nginx
+          image: ${{ steps.app_build-image.outputs.image }}
+
+      - name: Deploy Amazon ECS task definition
+        uses: aws-actions/amazon-ecs-deploy-task-definition@v1
+        with:
+          task-definition: ${{ steps.task-def.outputs.task-definition }}
+          service: flaskapp-NginxService-jCHCoJouh70F
+          cluster: flaskapp
           wait-for-service-stability: true
