--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,7 +71,7 @@ jobs:
         with:
           task-definition: app-task-definition.json
           container-name: app
-          image: ${{ steps.app_build.outputs.image }}
+          image: jmpark6846/flask-demo-app
 
       - name: Deploy Amazon ECS task definition
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
@@ -87,7 +87,7 @@ jobs:
         with:
           task-definition: nginx-task-definition.json
           container-name: nginx
-          image: ${{ steps.nginx_build.outputs.image }}
+          image: jmpark6846/flask-demo-nginx
 
       - name: Deploy Amazon ECS task definition
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
