compose yml update

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,8 @@ version: '3'
 services:
   app:
     container_name: 'app'
-    restart: always
     image: jmpark6846/flask-demo-app
     x-aws-pull_credentials: arn:aws:secretsmanager:ap-northeast-2:155706891817:secret:dockerhubAccessToken-hxMqte
-    build: app
     ports:
       - "8000:8000"
     command: pipenv run gunicorn -w 1 -b 0.0.0.0:8000 wsgi:app
@@ -14,26 +12,20 @@ services:
       - db
 
   db:
+    container_name: db
     image: mysql
     ports:
       - 3306:3306
+#    env_file:
+#      - .prod.env
     environment:
       - MYSQL_ROOT_PASSWORD=p@ssw0rd1
-    volumes:
-    - mysql:/var/lib/mysql
-    - mysql_config:/etc/mysql
 
   nginx:
     container_name: nginx
-    restart: always
     image: jmpark6846/flask-demo-nginx
     x-aws-pull_credentials: arn:aws:secretsmanager:ap-northeast-2:155706891817:secret:dockerhubAccessToken-hxMqte
-    build: nginx
     ports:
-    - "80:80"
+      - "80:80"
     depends_on:
       - app
-
-  volumes:
-    mysql:
-    mysql_config:
