환경변수를 사용하도록 수정

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,6 +68,8 @@ jobs:
       - name: app - Fill in the image URI in the Amazon ECS task definition
         id: task-def
         uses: aws-actions/amazon-ecs-render-task-definition@v1
+        env:
+
         with:
           task-definition: app-task-definition.json
           container-name: app
